[gd_scene load_steps=2 format=3 uid="uid://cvh9qy5s2no41"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_ui"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_ui")

[node name="InvincibilityLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 300.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 24
text = "INVINCIBLE: 30"
horizontal_alignment = 0
vertical_alignment = 1

[node name="HeightLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 60.0
offset_right = 300.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 20
text = "Height: 0%"
horizontal_alignment = 0
vertical_alignment = 1

[node name="GameOverPanel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="GameOverLabel" type="Label" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "GAME OVER"
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Kitty was hit by flaming yarn!"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -60.0
offset_right = 75.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "Restart"

[node name="VictoryPanel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VictoryPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VictoryLabel" type="Label" parent="VictoryPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "VICTORY!"
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="VictoryPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Kitty made it to the garden!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="RestartButton" type="Button" parent="VictoryPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -60.0
offset_right = 75.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "Play Again"
